--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="main-header">
-            <div class=" container">
+            <div class="container">
                 <div class="main-header-wrapper">
                     <a class="main-header-logo">Device</a>
                     <div class="user-tools">
@@ -85,7 +85,9 @@
                                         как Бен Стиллер!</p>
                                     <p class="popular-item-promo">Самая длинная палка для селфи доступна в нашем магазине. <br>
                                         Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-                                    <a class="button more-details" href="#">Подробнее</a>
+                                    <a class="button more-details" href="#">
+                                        <span class="more-details-content">Подробнее</span>
+                                    </a>
                                     <table class="popular-item-characteristics-list selfie-characteristics">
                                         <tr class="value">
                                             <td>8,5 м</td>
@@ -112,7 +114,9 @@
                                     <p class="popular-item-slogan">Худеем <br>
                                         правильно!</p>
                                     <p class="popular-item-promo">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-                                    <a class="button more-details" href="#">Подробнее</a>
+                                    <a class="button more-details" href="#">
+                                        <span class="more-details-content">Подробнее</span>
+                                    </a>
                                     <table class="popular-item-characteristics-list fitness-bracelet-characteristics">
                                         <tr class="value">
                                             <td>48 часов</td>
@@ -134,7 +138,9 @@
                                     <span class="popular-item-number number-three">03</span>
                                     <p class="popular-item-slogan">Порхает как бабочка, жалит как пчела!</p>
                                     <p class="popular-item-promo">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-                                    <a class="button more-details" href="#">Подробнее</a>
+                                    <a class="button more-details" href="#">
+                                        <span class="more-details-content">Подробнее</span>
+                                    </a>
                                     <table class="popular-item-characteristics-list quadrocopter-characteristics">
                                         <tr class="value">
                                             <td>800 м</td>
@@ -258,7 +264,9 @@
                         <li class="about-us__transport-companie-item">Автотрейдинг</li>
                         <li class="about-us__transport-companie-item">ЖелДорЭкспедиция</li>
                     </ul>
-                    <a class="button more-details" href="#">Подробнее о нас</a>
+                    <a class="button more-details-us" href="#">
+                        <span class="more-details-us-content">Подробнее о нас</span>
+                    </a>
                 </section>
                 <section class="index-column contacts" id="contacts">
                     <h2 class="index-column__title contacts__title">Контакты</h2>
@@ -266,7 +274,9 @@
                     <p class="index-column__image-box">
                         <img class="contacts__map" src="images/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
                     </p>
-                    <a class="button write-us" href="#write-us">Напишите нам</a>
+                    <a class="button write-us" href="#write-us">
+                        <span class="write-us-content">Напишите нам</span>
+                    </a>
                 </section>
             </div>
         </main>
@@ -299,8 +309,8 @@
                         <a href="https://htmlacademy.ru">
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
                             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
-                          </svg>
-                    </a>
+                            </svg>
+                        </a>
                     </p>
                 </div>
             </div>
